syntax = "proto3";

package duplicate;

option go_package = "xgo/tests/pb/pbinvalid";

import "proto/json.proto";

message DuplicateJSONKeyOfInlineMessage2 {
  message EmbedMessage1 {
    oneof OneType3 {
      option (json.oneof) = { json: "f_string1" };

      string f_string2 = 2 [ (json.field) = { json: "f_string2" } ];
    }
  }

  string f_string1 = 1 [ (json.field) = { json: "f_string1" } ];
  EmbedMessage1 f_message1 = 2 [ (json.field) = { inline: true } ];
}
